# TransitWeb

./: .env  .env.example  .eslintrc.cjs  .gitignore  .gitmodules  .prettierignore  .vscode-extensions.txt  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.cjs  pyproject.toml  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.ts
ansible/: inventory.yml  requirements.yml
ansible/playbooks/: 00_Deps.yml  01_Deps_And_User.yml  01_User.yml  02_Firewall.yml  03_Homebrew.yml  04_Change_User_Shell.yml  05_Configure_User_Env.yml  06_LunarVim.yml  07_CloneThisRepo.yml  08_Configure_nginx.yml  10_User.yml  20_Firewall.yml  30_Homebrew.yml  40_Change_User_Shell.yml  45_Configure_User_Env.yml  47_LunarVim.yml  50_CloneThisRepo.yml  60_Certbot.yml  70_Configure_nginx.yml  75_Configure_vhosts.yml  start_tmux.fish
ansible/vars/: Down Journal.md  firewall.yml  (+4 more)
build_src/: Dockerfile.alpine.node  Dockerfile.build_node  Dockerfile.ubuntu.node
cert/: transitweb.pem
docs/: Auth.md  City_Search.md  Client_Side_Data_Store.md  Containers.md  Develop_On_Macbook.md
prisma/: schema.prisma
script/: build_cities_js.py  connect.fish  init_dev.fish  make_gates.py  strip_city_file.py  strip_file.py  strip_files.fish
scripts/: build.fish  build_servers.fish  config.json  config_dev_frontend.json  dr_npm_build.sh  init_app.js  init_dev.fish  init_frontend.sh  start.sh
src/: app.d.ts  app.html  app.postcss  hooks.client.ts  hooks.server.ts  lucia.d.ts  types.d.ts
stack/: docker-compose.yml
(+231 files in other folders)
