[tool.poetry]
name = "transitweb"
version = "0.1.0"
description = ""
authors = ["Tyler Gannon <tgannon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
typer = { version = "^0.7.0", extras = ["all"] }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
